--- a/practice-story.css
+++ b/practice-story.css
@@ -27,7 +27,8 @@ h1 {
 h2 {
   font-size: 2rem;
   margin: 20px, 0;
-  line-height: 2rem;
+  line-height: 2.5rem;
+  margin-bottom: 12px;
 }
 
 h3 {
@@ -35,7 +36,32 @@ h3 {
   margin-bottom: 20px;
   margin-top: 20px;
 }
+
 h4 {
   font-size: 1.25rem;
   margin-top: 20px;
+}
+
+.byline, .credit {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: .9rem;
+}
+
+.credit {
+  text-align: right;
+}
+
+blockquote {
+  border-left: solid grey 4px;
+  padding-left: 20px;
+  margin-left: 30px;
+}
+
+ol {
+  list-style-position: inside;
+}
+
+#comment-notes {
+  background-color: #CCC;
+  padding: 12px;
 }
